Updated challenge 4
